# pyfvs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  validation.yml
docs/: .gitignore  FVS_VARIANT_COVERAGE.md  Makefile  conf.py  examples.md  getting-started.md  getting_started.md  index.md  index.rst
docs/api/: configuration.rst  growth_models.rst  index.md  index.rst  simulation-engine.md  stand.md  stand.rst  tree.md  tree.rst
docs/guides/: ecological-units.md  growth-models.md  harvesting.md  index.md
examples/: fia_to_fvs_simulation.py  native_fvs_comparison.py
notebooks/: fia_to_fvs_colab.ipynb
src/fvs_python/: bark_ratio.py  config_loader.py  crown_competition_factor.py  crown_width.py  data_export.py  exceptions.py  large_tree_height_growth.py  simulation_engine.py  stand.py  stand_output.py  tree.py  volume_library.py
src/pyfvs/: __init__.py  bark_ratio.py  ca_diameter_growth.py  clark_profile.py  competition.py  config_loader.py  crown_competition_factor.py  crown_ratio.py  crown_width.py  cs_diameter_growth.py  data_export.py  ecological_unit.py  exceptions.py  fia_integration.py  forest_type.py  growth_plots.py  harvest.py  height_diameter.py  large_tree_height_growth.py  logging_config.py  ls_diameter_growth.py  main.py  merchandising.py  model_base.py  mortality.py  ne_diameter_growth.py  oc_diameter_growth.py  op_diameter_growth.py  pn_diameter_growth.py  simulation_engine.py  sn_diameter_growth.py  species.py  stand.py  stand_metrics.py  taper.py  tree.py  tree_utils.py  validation.py  volume_library.py  wc_diameter_growth.py  (+1 more)
test_output/documentation_examples/: basic_stand_with_basal_area_output.txt  commercial_thin_schedule_output.txt  csv_export_output.txt  ecounit_simulation_output.txt  excel_export_output.txt  multiple_thins_output.txt  sawtimber_rotation_output.txt  simple_stand_growth_output.txt  simulation_engine_basic_output.txt  simulation_engine_yield_table_output.txt  single_thin_scenario_output.txt  species_comparison_output.txt  stand_quick_start_output.txt  thinning_from_below_output.txt  tree_quick_start_output.txt  yield_table_from_grow_output.txt  yield_table_multi_scenario_output.txt
test_output/error_tests/: sim_LP_TPA500_SI200.csv  sim_LP_TPA500_SI200.json  summary_LP_TPA500_SI200.txt
test_output/integration_tests/: scenario_comparison.csv  scenario_comparison.xlsx  sim_LP_TPA500_SI70.csv  sim_LP_TPA500_SI70.json  summary_LP_TPA500_SI70.txt  yield_table.csv  yield_table.xlsx
test_output/manuscript_validation/: comprehensive_validation_report.md  full_yield_simulation.csv  lev_mai_comparison.csv  lev_mai_comparison.md  loblolly_pine_north_si55.csv  loblolly_pine_south_si65.csv  longleaf_pine_north_si55.csv  longleaf_pine_south_si65.csv  shortleaf_pine_north_si55.csv  shortleaf_pine_south_si65.csv  slash_pine_north_si55.csv  slash_pine_south_si65.csv  yield_summary_by_species_age.csv
test_output/manuscript_validation_m231/: VALIDATION_REPORT_M231.md  species_comparison_m231.csv  table1_comparison_m231.csv
test_output/persistence_tests/: sim_LP_TPA500_SI70.csv  sim_LP_TPA500_SI70.json  summary_LP_TPA500_SI70.txt  yield_table.csv  yield_table.xlsx
test_output/stand_tests/: competition_effects.md  initialization.md  long_term_high_site.md  long_term_low_site.md  long_term_medium_site.md  mortality_high.md  mortality_low.md  mortality_medium.md  survival_25_years.md  young_stand_growth.md
test_output/tree_comprehensive_tests/: comprehensive_integration.md
test_output/tree_tests/: competition_effects.md  large_tree_growth.md  long_term_growth.md  small_tree_annual_growth.md  small_tree_growth.md
test_output/workflow_test/: scenario_comparison.csv  scenario_comparison.xlsx  sim_LP_TPA600_SI75.csv  sim_LP_TPA600_SI75.json  summary_LP_TPA600_SI75.txt  yield_table.csv  yield_table.xlsx
tests/: __init__.py  conftest.py  expected_values.yaml  test_competition.py  test_configuration.py  test_cs_variant.py  test_documentation_examples.py  test_harvest.py  test_integration.py  test_ls_variant.py  test_manuscript_validation.py  test_model_validation.py  test_mortality.py  test_native.py  test_ne_variant.py  test_op_variant.py  test_performance.py  test_pn_variant.py  test_small_tree_height_growth.py  test_stand.py  test_stand_metrics.py  test_stand_output.py  test_taper.py  test_tree.py  test_tree_comprehensive.py  test_validation.py  test_wc_variant.py
validation/: run_validation.py
validation/native/: __init__.py  compare_native.py
validation/reference_data/: acceptance_criteria.yaml  sweetgum_yield_tables.yaml  (+2 more)
(+202 files in other folders)
